--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@types/react-redux": "^7.0.8",
     "@types/react-router": "^4.4.5",
     "@types/react-router-dom": "^4.3.2",
+    "@types/react-select": "^2.0.17",
     "@types/redux-form": "^8.1.1",
     "@types/redux-saga": "^0.10.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "bootstrap-tagsinput": "^0.7.1",
+    "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
@@ -25,6 +28,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "react-select": "^2.4.3",
     "redux-form": "^8.2.0",
     "redux-saga": "^1.0.2",
     "typescript": "^3.4.5"
